@@ -2,6 +2,8 @@ Changes from jTDS 0.9-rc2
 =========================
 
 09/01/2004 - Alin Sinpalean
+ o Fixed bug #1020324 - "Driver.parseURL method: missing host check". Thanks
+   duccio for the find and fix.
  o Two simple but very important (in terms of performance) tweaks in Messages
    (caching the message ResourceBundle and no longer creating and using a
    MessageFormat instance when the message has no parameters). Before these two
